[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Themes/themes.theme" type="Theme" id=1]
[ext_resource path="res://Scenes/Themes/title.theme" type="Theme" id=2]
[ext_resource path="res://ThankYou.gd" type="Script" id=3]
[ext_resource path="res://assets/sfx/menu_hover.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sfx/menu_click.wav" type="AudioStream" id=5]

[node name="ThankYou" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.054902, 0.0431373, 0.0431373, 0.745098 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 30.0
margin_top = 61.0
margin_right = 993.0
margin_bottom = 539.0
custom_constants/separation = 60

[node name="VBoxContainer2" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 963.0
margin_bottom = 385.0
custom_constants/separation = 30

[node name="ThankYouMessage" type="Label" parent="CenterContainer/VBoxContainer/VBoxContainer2"]
margin_right = 963.0
margin_bottom = 33.0
theme = ExtResource( 1 )
text = "Thank you for playing"
align = 1

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer/VBoxContainer2"]
margin_top = 63.0
margin_right = 963.0
margin_bottom = 223.0
theme = ExtResource( 2 )
text = "RELIT"
align = 1

[node name="ThankYouMessage2" type="Label" parent="CenterContainer/VBoxContainer/VBoxContainer2"]
margin_top = 253.0
margin_right = 963.0
margin_bottom = 286.0
theme = ExtResource( 1 )
text = " We hope that you enjoyed it!"
align = 1

[node name="ThankYouMessage3" type="Label" parent="CenterContainer/VBoxContainer/VBoxContainer2"]
margin_top = 316.0
margin_right = 963.0
margin_bottom = 385.0
theme = ExtResource( 1 )
text = "If you have any feedback,
 please let us know in our itch io page!"
align = 1

[node name="MainMenu" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 445.0
margin_right = 963.0
margin_bottom = 478.0
mouse_filter = 1
theme = ExtResource( 1 )
text = "Click here to Main Menu"
align = 1

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
[connection signal="gui_input" from="CenterContainer/VBoxContainer/MainMenu" to="." method="_on_MainMenu_gui_input"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/MainMenu" to="." method="_on_MainMenu_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/VBoxContainer/MainMenu" to="." method="_on_MainMenu_mouse_exited"]
